--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,33 +1,46 @@
-	pipeline {
-	    agent any
-	    tools{
-	        maven 'M2_HOME'
-	    }
-	    stages {
-	        stage('Build') {
-	            steps {
-	                sh 'mvn clean'
-	                sh 'mvn install'
-	                sh 'mvn package'
-	            }
-	        }
-	        stage('Test') {
-	            steps {
-	                sh 'mvn test'
-	            }
-	        }
-	        stage('Deploy') {
-	            steps {
-	                echo 'Deploy Step'
-	                sleep 10
-	            }
-	        }
-	        stage('Docker') {
-	            steps {
-	                echo 'Image step'
-	            }
-	        }
-	    }
-	}
+pipeline {
+    agent any
+    tools{
+        maven 'M2_HOME'
+    }
+    environment {
+    registry = '111035340400.dkr.ecr.us-east-1.amazonaws.com/devops_repository'
+    registryCredential = 'jenkins-ecr'
+    dockerimage = ''
+  }
+    stages {
+        stage('Checkout'){
+            steps{
+                git branch: 'main', url: 'https://github.com/namode1/helloworld_jan_22.git'
+            }
+        }
+        stage('Code Build') {
+            steps {
+                sh 'mvn clean package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+        }
+        stage('Build Image') {
+            steps {
+                script{
+                    dockerImage = docker.build registry + ":$BUILD_NUMBER"
+                } 
+            }
+        }
+        stage('Deploy image') {
+            steps{
+                script{ 
+                    docker.withRegistry("https://"+registry,"ecr:us-east-1:"+registryCredential) {
+                        dockerImage.push()
+                    }
+                }
+            }
+        }  
+    }
+}
 
-
+Step 7 : perform the first tests. 
